use list methods isEmpty, getFirst